--- a/setup.cfg
+++ b/setup.cfg
@@ -10,3 +10,29 @@ versionfile_source = pysweeper/_version.py
 versionfile_build = pysweeper/_version.py
 tag_prefix =
 parentdir_prefix = pysweeper-
+
+[flake8]
+ignore = D202,D203,W503,E203
+max-line-length = 79
+exclude = build,dist,docs,versioneer.py,pysweeper/_version.py,.git,__pycache__,.tox,.eggs,*.egg,.asv
+
+[pydocstyle]
+ignore = D105,D107
+inherit = false
+match = *.py
+
+[isort]
+line_length = 79
+multi_line_output = 3
+include_trailing_comma = true
+skip = versioneer.py,pysweeper/_version.py
+
+[bdist_wheel]
+universal = 0
+
+[mypy-pysweeper._version]
+ignore_errors = true
+
+[tool:pytest]
+xfail_strict = true
+addopts = --strict-markers
